--- a/src/pages/cordedVacPage/products.css
+++ b/src/pages/cordedVacPage/products.css
@@ -1,4 +1,9 @@
 @media (min-width: 375px) {
+  html,
+  body {
+    margin: 0;
+    padding: 0;
+  }
   .products_container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -86,6 +91,8 @@
 
   .products_wrapper {
     padding: 10px;
+
+    margin-top: 70px;
 
     min-height: 100vh;
   }
